fixed desktop view spacing

--- a/src/app/pages/events/events.component.scss
+++ b/src/app/pages/events/events.component.scss
@@ -79,15 +79,20 @@
 
     &__events-overview {
         width: 100%;
-        height: 90vh;
+        // height: 80vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
 
         &__content {
-            width: 65%;
+            width: 75%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             &__event-list {
+                max-width: 1200px;
                 margin-top: 50px;
                 display: grid;
                 grid-template-rows: 1fr 1fr;
@@ -95,8 +100,10 @@
                 gap: 30px;
                 padding: 20px;
 
+
                 &__item {
                     width: 100%;
+                    max-width: 750px;
                     height: 200px;
                     justify-self: center;
                     background-color: #F9F8F8;
@@ -113,11 +120,13 @@
                         color: var(--text-inverted);
                     }
                 }
+
             }
         }
     }
 
     &__upcoming {
+        margin-top: 8%;
         width: 100%;
         height: 90vh;
         display: flex;
@@ -127,6 +136,7 @@
 
         &__content {
             width: 90vw;
+            max-width: 1600px;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -209,12 +219,17 @@
                         }
 
                         .event-item-middle-container {
+                            justify-self: left;
                             .event-name {
+                                font-family: "Hind", Arial, Helvetica, sans-serif;
                                 font-size: 23px;
                                 color: var(--headline);
+                                line-height: 30px;
                             }
 
                             .event-description {
+                                text-align: left;
+                                color: #858b96;
                                 margin-top: 10px;
                                 font-size: 18px;
                             }
